error_log
   Compiling tim v0.1.0 (/Users/wongjiahau/repos/editor-idea)
warning: unused imports: `Applicable`, `Movement`, `OldNew`, `UndoTree`
  --> src/layout.rs:6:26
   |
6  |         editor::{Editor, Movement},
   |                          ^^^^^^^^
...
15 |     undo_tree::{Applicable, OldNew, UndoTree},
   |                 ^^^^^^^^^^  ^^^^^^  ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `BufferId`
  --> src/app.rs:17:22
   |
17 |     buffer::{Buffer, BufferId},
   |                      ^^^^^^^^

warning: unused imports: `FilterTarget`, `Filter`
  --> src/selection_mode/mod.rs:39:17
   |
39 |     selection::{Filter, FilterTarget, Filters, Selection},
   |                 ^^^^^^  ^^^^^^^^^^^^

warning: unreachable expression
   --> src/app.rs:203:9
    |
201 |         std::process::exit(0);
    |         --------------------- any code following this expression is unreachable
202 |
203 |         Ok(())
    |         ^^^^^^ unreachable expression
    |
    = note: `#[warn(unreachable_code)]` on by default

error[E0599]: no method named `navigate_file` found for mutable reference `&mut app::App<T>` in the current scope
   --> src/app.rs:474:22
    |
474 |                 self.navigate_file(movement)?;
    |                      ^^^^^^^^^^^^^ help: there is a method with a similar name: `move_file`

warning: unused import: `Highlight`
 --> src/context.rs:9:24
  |
9 |     syntax_highlight::{Highlight, HighlightConfigs},
  |                        ^^^^^^^^^

For more information about this error, try `rustc --explain E0599`.
warning: `tim` (bin "tim") generated 5 warnings
error: could not compile `tim` (bin "tim") due to previous error; 5 warnings emitted
